trunk/Archive2/1a/cd9475ce500c45/output
main.cpp:9:9: error: cannot assign to a variable captured by copy in a non-mutable lambda
        ++a;
        ^ ~
1 error generated.
